# AI-Robot-Book-Humble-zh

./: README.md
answers/: README.md
answers/chapter1/: README.md
answers/chapter2/: README.md
answers/chapter3/: README.md  challenge_3_1.py
answers/chapter4/: README.md  happy_move_node2.py
answers/chapter5/: README.md  challenge5_1_say_hello.py  challenge5_2_cup_direction.py  quiz5_1_smile_detection.py
answers/chapter6/: README.md  challenge6_1.py  challenge6_2.py  challenge6_4.py  challenge6_5.py  challenge6_6.py  challenge6_7.py  challenge6_8.py  kinematics6_2.py
answers/chapter7/: README.md
appendixB/: README.md
appendixB/airobot_action/: README.md  package.xml  setup.cfg  setup.py
appendixE/: README.md
appendixE/tf_examples/: README.md  package.xml  setup.py
chapter2/: README.md
chapter2/airobot_interfaces/: README.md  package.xml
chapter2/bringme_action/: README.md  package.xml  setup.cfg  setup.py
chapter2/bringme_service/: README.md  package.xml  setup.cfg  setup.py
chapter2/happy/: README.md  package.xml  setup.cfg  setup.py
chapter2/happy_parameter/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
chapter2/happy_parameter/happy_parameter/: happy_parameter_client_node.py  happy_parameter_server_node.py
chapter2/happy_topic/: setup.py  (+2 more)
chapter3/: README.md
chapter4/: README.md
chapter5/: README.md
chapter6/: README.md
chapter7/: README.md
crane_plus-airobot/: README.md
flexbe_behavior_engine/: README.md
flexbe_webui/: README.md
turtlebot3_happy_mini/: NOTICE  README.md
xf_speech/: install_list.txt
(+283 files in other folders)
